adde views system

--- a/news/static/news/button_like.css
+++ b/news/static/news/button_like.css
@@ -71,3 +71,11 @@
     color: #fefefe;
 }
 
+.fa-eye:before {
+    position: relative;
+    display: inline-block;
+    color: #8a8a8a;
+    padding-top: 0.77rem;
+    vertical-align: middle;
+    content: "\f06e";
+}
