--- a/news/static/news/label.css
+++ b/news/static/news/label.css
@@ -5,11 +5,12 @@
     padding-top: 1rem;
     font-size: 1.5rem;
     height: 27px;
+    width: 3.5rem;
     font-style: italic;
     font-weight: lighter;
     position: relative;
     vertical-align: middle;
-    text-align: center;
+    text-align: left;
     display: inline-block;
     color: #8a8a8a;
 }
