--- a/weblog/Views/Shared/_Layout.cshtml
+++ b/weblog/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro|Noto+Serif:700|EB+Garamond&display=swap">
     <link
           rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
@@ -12,40 +12,22 @@
     <link href="~/content/style.css" rel="stylesheet" />
 </head>
 <body>
-<div>
-  <nav class="navbar navbar-expand-sm navbar-light p-0">
-    <div class="container">
-      <a href="#" class="navbar-brand">Medium</a>
-      <ul class="navbar-nav">
-        <li class="nav-item mx-1">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item mx-1">
-          <a class="nav-link" href="#">About</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+<nav class="navbar navbar-expand-sm navbar-light p-0 mt-4">
+  <div class="container">
+    <a href="#" class="navbar-brand">Medium</a>
+    <ul class="navbar-nav">
+      <li class="nav-item mx-1">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item mx-1">
+        <a class="nav-link" href="#">About</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-  <nav class="navbar navbar-expand-sm navbar-light p-0">
-    <div class="container" style="justify-content: center;">
-      <ul class="navbar-nav">
-        <li class="nav-item mx-3">
-          <a class="nav-link" href="#">Home</a>
-        </li>
-        <li class="nav-item mx-3">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item mx-3">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item mx-3">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</div>
+
+  
 @RenderBody()
 <script
   src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
