--- a/weblog/Views/Post/List.cshtml
+++ b/weblog/Views/Post/List.cshtml
@@ -1,23 +1,3 @@
 @model PostListViewModel
 
-
-<div class="list">
-    <nav class="navbar navbar-expand-sm navbar-light pt-0">
-        <div class="container" style="justify-content: center;">
-            <ul class="navbar-nav">
-                <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">HOME</a>
-                </li>
-                <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">ABOUT</a>
-                </li>
-                <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">SERVICES</a>
-                </li>
-                <li class="nav-item mx-3">
-                    <a class="nav-link" href="#">CONTACT</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
+<partial name="_NavbarPartial"/>
