--- a/weblog/Views/Shared/_Layout.cshtml
+++ b/weblog/Views/Shared/_Layout.cshtml
@@ -14,7 +14,11 @@
 <body>
 <nav class="navbar navbar-expand-sm navbar-light p-0 mt-4">
   <div class="container">
-    <a href="#" class="navbar-brand">Medium</a>
+    <div class="d-flex align-items-center">
+      <a href="#" class="navbar-brand">Medium</a> 
+      <a class="nav-link text-dark p-0 h3 mb-0" href="#">@ViewData["category"]</a>
+    </div>
+    
     <ul class="navbar-nav">
       <li class="nav-item mx-1">
         <a class="nav-link" href="#">Home</a>
