--- a/weblog/Views/_ViewImports.cshtml
+++ b/weblog/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using weblog.Models
 @using weblog.ViewModels
 @using Microsoft.AspNetCore.Html
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
