--- a/weblog/wwwroot/content/style.css
+++ b/weblog/wwwroot/content/style.css
@@ -53,3 +53,48 @@
     padding-bottom: 2rem;
     font-weight: bold;
 }
+
+.detail {
+    position: relative;
+}
+
+.fixed {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 100px;
+    height: 50px;
+    background: #000;
+}
+
+.fixed.hidden {
+    display: none;
+}
+
+
+.card .card-title {
+    font-family: "Lucida Grande", sans-serif;
+    font-weight: bold;
+}
+
+.card .author {
+    font-family: "Source Sans Pro";
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.card .star {
+    font-size: 0.85rem;
+}
+
+.one-card img {
+    width: 100%;
+    height: 196px;
+    object-fit: cover;
+}
+
+.two-card img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
