finally fixed everything

--- a/weblog/Views/Shared/_ThreeCardPartial.cshtml
+++ b/weblog/Views/Shared/_ThreeCardPartial.cshtml
@@ -2,10 +2,10 @@
 
 <div class="card mb-3 border-white three-card">
     <div class="row">
-        <div class="pl-0 col d-flex flex-column">
-            <a asp-controller="Post" asp-action="Detail" asp-route-id="@Model.PostId">
-                <div class="mb-0 category">@Model.Category?.Title.ToUpper()</div>
-                <div class="card-title h5 mb-auto">
+        <div class="px-0 col d-flex flex-column">
+            <a asp-controller="Post" asp-action="Detail" asp-route-id="@Model.PostId" class="mb-auto">
+                <div class="mb-auto category">@Model.Category?.Title.ToUpper()</div>
+                <div class="card-title h5 mb-1 text-dark">
                     @Model.Title
                 </div>
                 <div class="card-subtitle text-secondary mb-auto h6">
@@ -13,7 +13,7 @@
                 </div>
             </a>
             <div class="author text-dark card-subtitle">Author's Name</div>
-            <div class="pt-1 text-muted card-subtitle star">
+            <div class="pt-1 mb-0 text-muted card-subtitle star">
                 @Model.DatePosted.ToString("MMM dd") · @Model.TimeToRead min read
                 @if (Model.IsForSubscribersOnly)
                 {
