--- a/weblog/Views/Shared/_TwoCardPartial.cshtml
+++ b/weblog/Views/Shared/_TwoCardPartial.cshtml
@@ -10,8 +10,8 @@
             />
         </div>
         <div class="pl-3 col d-flex flex-column">
-            <a asp-controller="Post" asp-action="Detail" asp-route-id="@Model.PostId">
-                <div class="card-title h5 mb-auto">
+            <a asp-controller="Post" asp-action="Detail" asp-route-id="@Model.PostId" class="mb-auto">
+                <div class="card-title h5 text-dark">
                     @Model.Title
                 </div>
             </a>
