--- a/weblog/Views/Post/Detail.cshtml
+++ b/weblog/Views/Post/Detail.cshtml
@@ -17,16 +17,13 @@
         </h3>
       </div>
       <div class="col-6">
-        <img src=@Model.ImageUrl alt="" />
+        <img src="@Model.ImageUrl" alt="" />
       </div>
     </div>
   </div>
   <div class="container">
-    <div class="row">
-      <div class="col-2"></div>
-      <div class="col-8">
-        @(new HtmlString(Model.Text))
-      </div>
+    <div class="col-8 offset-2">
+      @(new HtmlString(Model.Text))
     </div>
   </div>
 </div>
