--- a/weblog/Views/Shared/_Layout.cshtml
+++ b/weblog/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 <nav class="navbar navbar-expand-sm navbar-light p-0 mt-4">
   <div class="container">
     <div class="d-flex align-items-center">
-      <a href="#" class="navbar-brand">Medium</a> 
+      <a class="navbar-brand" asp-controller="Home" asp-action="Index">Medium</a> 
       <a class="nav-link text-dark p-0 h3 mb-0" href="#">@ViewData["category"]</a>
     </div>
     
