--- a/weblog/Views/_ViewImports.cshtml
+++ b/weblog/Views/_ViewImports.cshtml
@@ -1,4 +1,6 @@
+@using weblog
 @using weblog.Models
 @using weblog.ViewModels
+@using weblog.Pages
 @using Microsoft.AspNetCore.Html
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
