--- a/weblog/Views/_ViewImports.cshtml
+++ b/weblog/Views/_ViewImports.cshtml
@@ -4,3 +4,4 @@
 @using weblog.Pages
 @using Microsoft.AspNetCore.Html
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper weblog.TagHelpers.*, weblog
