added sending email

--- a/weblog/Views/Shared/_Layout.cshtml
+++ b/weblog/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
       <li>
         <partial name="_LoginPartial"/>
       </li>
+      <li>
+        <a asp-controller="Home" asp-action="SendMessage">Contact</a>
+      </li>
       
     </ul>
   </div>
