added credentials for EmailService to configuration file

--- a/weblog/Views/Shared/_Layout.cshtml
+++ b/weblog/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         <partial name="_LoginPartial"/>
       </li>
       <li>
-        <a asp-controller="Home" asp-action="SendMessage">Contact</a>
+        <a class="nav-link text-dark" asp-controller="Home" asp-action="SendMessage">Contact</a>
       </li>
       
     </ul>
