finished codelab1 isob

--- a/5term/ASPnetWeblog/weblog/Views/Home/Index.cshtml
+++ b/5term/ASPnetWeblog/weblog/Views/Home/Index.cshtml
@@ -1,6 +1,11 @@
 @model HomeViewModel
-
+@{
+  var ti = "goddam";
+  var pdt = "you";
+}
 <partial name="_NavbarPartial"/>
+
+<sample alternate-classes="ti;pdt"></sample>
 
 <div class="index container mt-3">
   <div class="row">
